; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/etherswitch/extr_etherswitch.c_etherswitch_attach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/etherswitch/extr_etherswitch.c_etherswitch_attach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.etherswitch_softc = type { i32, i32 }
%struct.make_dev_args = type { i32, %struct.etherswitch_softc*, i32, i32, i32* }

@etherswitch_cdevsw = common dso_local global i32 0, align 4
@UID_ROOT = common dso_local global i32 0, align 4
@GID_WHEEL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"etherswitch%d\00", align 1
@.str.1 = private unnamed_addr constant [35 x i8] c"failed to create character device\0A\00", align 1
@ENXIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @etherswitch_attach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @etherswitch_attach(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.etherswitch_softc*, align 8
  %6 = alloca %struct.make_dev_args, align 8
  store i32 %0, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call %struct.etherswitch_softc* @device_get_softc(i32 %7)
  store %struct.etherswitch_softc* %8, %struct.etherswitch_softc** %5, align 8
  %9 = load i32, i32* %3, align 4
  %10 = load %struct.etherswitch_softc*, %struct.etherswitch_softc** %5, align 8
  %11 = getelementptr inbounds %struct.etherswitch_softc, %struct.etherswitch_softc* %10, i32 0, i32 1
  store i32 %9, i32* %11, align 4
  %12 = call i32 @make_dev_args_init(%struct.make_dev_args* %6)
  %13 = getelementptr inbounds %struct.make_dev_args, %struct.make_dev_args* %6, i32 0, i32 4
  store i32* @etherswitch_cdevsw, i32** %13, align 8
  %14 = load i32, i32* @UID_ROOT, align 4
  %15 = getelementptr inbounds %struct.make_dev_args, %struct.make_dev_args* %6, i32 0, i32 3
  store i32 %14, i32* %15, align 4
  %16 = load i32, i32* @GID_WHEEL, align 4
  %17 = getelementptr inbounds %struct.make_dev_args, %struct.make_dev_args* %6, i32 0, i32 2
  store i32 %16, i32* %17, align 8
  %18 = getelementptr inbounds %struct.make_dev_args, %struct.make_dev_args* %6, i32 0, i32 0
  store i32 384, i32* %18, align 8
  %19 = load %struct.etherswitch_softc*, %struct.etherswitch_softc** %5, align 8
  %20 = getelementptr inbounds %struct.make_dev_args, %struct.make_dev_args* %6, i32 0, i32 1
  store %struct.etherswitch_softc* %19, %struct.etherswitch_softc** %20, align 8
  %21 = load %struct.etherswitch_softc*, %struct.etherswitch_softc** %5, align 8
  %22 = getelementptr inbounds %struct.etherswitch_softc, %struct.etherswitch_softc* %21, i32 0, i32 0
  %23 = load i32, i32* %3, align 4
  %24 = call i32 @device_get_unit(i32 %23)
  %25 = call i32 @make_dev_s(%struct.make_dev_args* %6, i32* %22, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %24)
  store i32 %25, i32* %4, align 4
  %26 = load i32, i32* %4, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %32

28:                                               ; preds = %1
  %29 = load i32, i32* %3, align 4
  %30 = call i32 @device_printf(i32 %29, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.1, i64 0, i64 0))
  %31 = load i32, i32* @ENXIO, align 4
  store i32 %31, i32* %2, align 4
  br label %33

32:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %33

33:                                               ; preds = %32, %28
  %34 = load i32, i32* %2, align 4
  ret i32 %34
}

declare dso_local %struct.etherswitch_softc* @device_get_softc(i32) #1

declare dso_local i32 @make_dev_args_init(%struct.make_dev_args*) #1

declare dso_local i32 @make_dev_s(%struct.make_dev_args*, i32*, i8*, i32) #1

declare dso_local i32 @device_get_unit(i32) #1

declare dso_local i32 @device_printf(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
